feat(front): add user activation feature
